# voice-agent-backend

./: .env.example  Dockerfile  agent.py  config.py  main.py  pyproject.toml  requirements.txt  test_async_db.py  test_db.py  test_db_speed.py
db/: supabase.py
llm/: ollama_llm.py  openrouter_llm.py
tools/: appointments.py  summary.py
